# kassensystem

./: .deepsource.toml  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  configuration.yaml  database.db  rustfmt.toml
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
.nvim/: init.lua
config/: default.yaml
migrations/: 20220318170250_create_user_table.sql
migrations/2022-02-22-192202_create_users/: up.sql
migrations/2022-02-23-182215_add_balance/: up.sql
migrations/2022-02-23-183412_change_datatype/: up.sql
scripts/: init_db.sh  typescript
src/: config.rs  configuration.rs  lib.rs  main.rs  models.rs  schema.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_user.rs  user_email.rs  user_matrikelnummer.rs  user_name.rs
src/routes/: mod.rs  transaction.rs  users.rs
tests/: health_check.rs
