[package]
name = "ausgleichende_gerechtigkeit"
authors = ["Leon Fuss<leon.fuss@icloud.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 
# Run Dev env:
#  cargo watch -x check -x test -x run

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ausgleichende_gerechtigkeit"

[dependencies]
    actix-web =  "4"
    tokio = { version = "1", features = ["macros" , "rt-multi-thread"] }
    reqwest = "0.11"
    serde = { version = "1", features = ["derive"]}
    sqlx = {version = "0.5", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono","migrate"]}
